Fix flex items overflowing container

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@
     margin: 10px;
 }
 
+.content {
+    background-color: lightblue;
+}
+
 .footer {
     display: flex;
     justify-content: space-between;
@@ -26,6 +30,10 @@
     display: flex;
     background-color: lightblue;
     justify-content: space-between;
+}
+
+.flex-column {
+    min-width: 25%;
 }
 
 img {
@@ -43,10 +51,6 @@ a {
 
 ul, ol {
     padding: 0;
-}
-
-.content {
-    background-color: lightblue;
 }
 
 h1, h2, h3, p, li {
